<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_form_gui">FormGUI</string>
    <string name="large_text">s
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="WeekDet">Please enter your weekly payment details</string>
    <string name="Hrs">Hours</string>
    <string name="Rt">Rate</string>
    <string name="H_I">Health insurance</string>
    <string name="U_S">Union subscriptions</string>
    <string name="Over_H">Overtime hours</string>
    <string name="Tax_C">Tax credit</string>
    <string name="weekly_payment_calculation">Weekly payment calculation</string>
    <string name="Mon_Cal">Monthly payment calculation  </string>
    <string name="Ann_Cal">Annual payment calculation</string>
    <string name="cal">Calculate</string>
    <string name="tEnt">My Entitlements</string>
    <string name="ti">The following information has been added:</string>
    <string name="tH">Hours:</string>
    <string name="tRate">Rate:</string>
    <string name="tHea">Health Insurance:</string>
    <string name="tUnion">Union Subs:</string>
    <string name="tTaxCredit">Tax Credit:</string>
    <string name="tOver">Overtime:</string>
    <string name="tWeekly">Weekly payment is:</string>
    <string name="tMonthly">Monthly payment is:</string>
    <string name="tYearly">Annual payment is:</string>
    <string name="tOptions">Please select from one of the options</string>
    <string name="tNet">Your Net Payment:</string>
    <string name="Check_reb">Please check boxes which are relevant to you in order to help us determine whether you are eligible for the tax rebate</string>
    <string name="Employed_Y">I have been employed for entire year</string>
    <string name="Med_exp">I have had medical expenses</string>
    <string name="Previous">I have previously claimed my tax rebate</string>
    <string name="Two_Jobs">I have two or more jobs</string>
    <string name="done">Done</string>
    <string name="Emergency_Tax">I am/have been on the emergency tax</string>
    <string name="rMsg1">Good news! It seems that you might be entitled to get some money back!</string>
    <string name="rMsg2">It does not seem like you can get anything back, however, please fill out the form on the next screen and we will get one of our team member to double check that.</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="add1">Address 1</string>
    <string name="add2">Address 2</string>
    <string name="add3">Address 3</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="msg">Your message here</string>
    <string name="sub">Submit</string>
    <string name="fCheck">Please check all fields</string>
    <string name="fNotMatch">Email does not match!</string>
    <string name="fINet">Please check your internet connection</string>
    <string name="fInternet1">There is no active internet connection. You won\'t be able to submit your details.</string>
    <string name="ThankYou">Thank you. A member of our team will be in touch with you shortly to give you an update on your application. Thank you for using TaxRite!</string>
    <string name="exit">Exit</string>
    <string name="entitelement">Entitlements</string>
    <string name="single">Single</string>
    <string name="maried">Married</string>
    <string name="working">Working</string>
    <string name="job_seeker">Job Seeker</string>
    <string name="Depend">Dependencies</string>
    <string name="age">Age</string>
    <string name="eLiving">Living in Ireland over 3 years</string>
    <string name="checkE">Check Entitlements</string>
    <string name="iAm">I am:</string>
    <string name="tickBox">Please tick the options which are relevant to you, enter your age and number of dependants.</string>
    <string name="changeLang">Change Language</string>
    <string name="start">Start</string>
    <string name="entD1">Good news! It seems that you might be entitled to get Medical card on based on scheme 1,please apply with form provided</string>
    <string name="entD2">Good news! It seems that you might be entitled to get Medical card on based on scheme 2,please apply with form provided</string>
    <string name="entD3">based on your net income</string>
    <string name="entD4">Good news! It seems like you might be entitled to get Medical card on based on scheme 3,please apply with form provided</string>
    <string name="entD5">Sorry you are not entitled to get medical card but you may try for a GP card only</string>
    <string name="entD6">Good news!! you are entitled to get family supplement to make your total weekly income €521</string>
    <string name="entD7">Good news!! you are entitled to get family supplement to make your total weekly income €622</string>
    <string name="entD8">Good news!! you are entitled to get family supplement to make your total weekly income €723</string>
    <string name="entD9">sorry your circumstances seems bit complex please contact one of your local social office,Thanks</string>
    <string name="entD10">sorry your circumstances seems bit complex please contact one of your local social office,Thanks</string>
    <string name="entD11">You are entitled for child benefit of €140</string>
    <string name="entD12">You are entitled for child benefit of €280</string>
    <string name="entD13">You are entitled for child benefit of €420</string>
    <string name="entD14">You are entitled for child benefit of €560</string>
    <string name="entD15">You are entitled for child benefit of €700</string>
    <string name="entD16">You are entitled for child benefit of €840</string>
    <string name="entD17">Child benefit increases 140 euro for every single child</string>
    <string name="entD18">You are entitled to get the student grant, please apply online </string>
    <string name="entD19">Sorry, you are not entitled to get the SUSI student grant</string>
    <string name="entD20">You are entitled to get the rent supplement</string>
    <string name="entD21">Sorry, you are not entitled to get the rent supplement</string>
</resources>