<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".RebateGUI">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_margin="10dp"
            android:id="@+id/imglogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/txtinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/Check_reb"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="19sp" />

        <CheckBox
            android:id="@+id/chk1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:color/holo_orange_light"
            android:text="@string/Employed_Y" />

        <CheckBox
            android:id="@+id/chk2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:color/holo_orange_light"
            android:text="@string/Med_exp" />

        <CheckBox
            android:id="@+id/chk3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:color/holo_orange_light"
            android:text="@string/Previous" />

        <CheckBox
            android:id="@+id/chk4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:color/holo_orange_light"
            android:text="@string/Two_Jobs" />

        <CheckBox
            android:id="@+id/chk5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:color/holo_orange_light"
            android:text="@string/Emergency_Tax" />

        <Button
            android:id="@+id/btndone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/done"
            android:textColor="#000000"/>
    </LinearLayout>
</ScrollView>