<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#000000"
	tools:context=".EntitlementsGUI">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">

		<ImageView
			android:id="@+id/imageView7"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:srcCompat="@drawable/logo" />

		<TextView
			android:layout_margin="20dp"
			android:id="@+id/textView2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="Please thick the options which are applicable to you"
			android:textColor="@android:color/holo_orange_dark"
			android:textSize="18sp" />

		<CheckBox
			android:id="@+id/cbsingle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="10dp"
			android:background="@android:color/holo_orange_light"
			android:hint="@string/single" />

		<CheckBox
			android:id="@+id/cbmaried"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="10dp"
			android:background="@android:color/holo_orange_light"
			android:hint="@string/maried" />

		<CheckBox
			android:id="@+id/cbworking"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="10dp"
			android:background="@android:color/holo_orange_light"
			android:hint="@string/working" />

		<CheckBox
			android:id="@+id/cbjseeker"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="10dp"
			android:background="@android:color/holo_orange_light"
			android:hint="@string/job_seeker" />

		<CheckBox
			android:id="@+id/ckbresidence"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="10dp"
			android:background="@android:color/holo_orange_light"
			android:hint="Living in Ireland over 3 years" />

		<EditText
			android:id="@+id/txtage"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="10dp"
			android:background="@android:color/holo_orange_light"
			android:ems="10"
			android:hint="@string/age"
			android:inputType="number" />

		<EditText
			android:id="@+id/txtdependencies"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="10dp"
			android:background="@android:color/holo_orange_light"
			android:ems="10"
			android:hint="@string/Depend"
			android:inputType="number" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

			<Button
				android:id="@+id/btnclick"
				android:layout_width="365dp"
				android:layout_height="wrap_content"
				android:layout_alignParentStart="true"
				android:layout_alignParentLeft="true"
				android:layout_alignParentEnd="true"
				android:layout_alignParentRight="true"
				android:layout_centerVertical="true"
				android:layout_marginStart="27dp"
				android:layout_marginLeft="27dp"
				android:layout_marginTop="20dp"
				android:layout_marginEnd="19dp"
				android:layout_marginRight="19dp"
				android:hint="@string/checkE" />
        </RelativeLayout>

	</LinearLayout>
</ScrollView>
